# epiccoder

./: .gitignore  MANIFEST.in  Makefile  README.MD  README.md  clean_and_freeze.sh  clean_and_freeze_mac.sh  clean_and_freeze_win.txt  pyproject.toml  requirements.txt
epiccoder/: __init__.py  aboutui.py  aboutwindow.py  config.py  customeditor.py  darkmode.py  duplicatedlg.py  duplicateui.py  fileutils.py  fuzzy_searcher.py  lexer.py  main.py  mainwindow.py  questionbox.py  resource.py  splashscreen.py  textutils.py  themes.py  threestatebutton.py  version.py
epiccoder/resources/fonts/Consolas/: ATTRIBUTION.txt
epiccoder/resources/icons/: ATTRIBUTION.html
epiccoder/ui/: aboutui.ui  convert.sh
src/main/python/: aboutui.py  aboutwindow.py  customeditor.py  duplicatedlg.py  duplicateui.py  fuzzy_searcher.py  lexer.py  main.py  mainwindow.py  newfile.py  newfilewindow.py  version.py
src/main/resources/base/fonts/FiraCode/: ATTRIBUTION.html
ui/: aboutui.py  aboutui.ui  duplicateui.ui  newfile.ui
